fixed nav bar and site not aligning correctly.

--- a/css/index.css
+++ b/css/index.css
@@ -74,31 +74,42 @@ p {
 h1{
     font-size:2rem;
     padding-bottom:1%;
+    text-align:left;
 }
 header{
 display:flex;
-flex-direction:row-reverse;
+justify-content:space-around;
+width:85%;
+
+
+
 }
 
-.container nav{
+header nav{
     display:flex;
     flex-direction:row;
     justify-content:space-evenly;
     padding-bottom:4%;
+    padding-top:5%;
+    padding-left:3%;
     
     
 
 }
-.container nav a{
+header nav a{
     color:black;
     text-decoration:none;
+    display:flex;
+    
+    margin-left:15%;
+   padding-left:15%;
+    
 }
 .navlogo img{
-display:flex;
-flex-direction:left;
-padding-right:100%;
-margin-top:2%;
-margin-left:10%;
+    
+    padding-top:5%;
+   
+
 }
 .backgroundimage{
   background-image: url("/img/jumbo.jpg");
@@ -289,28 +300,28 @@ margin-left:10%;
     padding-right: 0;
 }
 
-footer {
-    width: 100%;
-    background-color: black;
-}
+footer{
+  background-color:black;
+  color:black;
 
-.footnav a {
-    width: 100%;
-    display: flex;
-    flex-direction:column;
-    color:white;
-    background-color:white
-}
-
- nav a {
-    color: white;
-    background-color:white;
-    display:flex;
-    justify-content:left;
-    text-decoration: none;
-    text-align:center;
-    margin-top:5%;
-    font-size:1rem;
+    
+    
+    }
+    
+    footer nav{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-evenly;;
+        padding-bottom:4%;
+        padding-top:3%;
+        
+        
+    
+    }
+    footer nav a{
+        color:black;
+        text-decoration:none;
+        display:flex;
  }
  /* About page*/
 .headerimage2{
